--- a/nft-card-component/style.css
+++ b/nft-card-component/style.css
@@ -98,6 +98,23 @@ p {
   font-weight: 400;
 }
 
+.inline-list {
+  display: inline-flex;
+	list-style: none;
+	padding-left: 0;
+	margin: 0;
+}
+
+.back {
+  text-align: center;
+  margin-top: 0.7rem;
+}
+
+.hey-you {
+  margin-right: 0.5rem;
+}
+
+
 @media (max-width: 375px) {
   .card {
     max-width: 375px;
