--- a/nft-card-component/style.css
+++ b/nft-card-component/style.css
@@ -10,7 +10,6 @@
 body {
   font-family: 'Outfit', sans-serif;
   background-color: var(--main-bg-blue);
-  max-width: 1440px
 }
 
 p {
@@ -116,13 +115,21 @@ p {
 }
 
 
-@media (max-width: 375px) {
+@media (min-width: 375px) {
   .card {
     max-width: 375px;
   }
 }
 
 @media (max-width: 1440px) {
+  .card {
+    margin: 40px auto;
+    max-width: 375px;
+    box-shadow: 1px 1px 2px rgba(0,0,0,.1);
+  }
+}
+
+@media (min-width: 1440px) {
   .card {
     margin: 40px auto;
     max-width: 375px;
