addiong active state

--- a/expenses-chart-component-main/expenses-chart-component-main/style.css
+++ b/expenses-chart-component-main/expenses-chart-component-main/style.css
@@ -10,7 +10,7 @@
 body {
   font-size: 1.125rem;
   font-family: 'DM Sans', sans-serif;
-  background-color: var(--very-pale-orange);
+  background-color: var(--cream);
   max-width: 375px;
   margin: 40px auto;
 }
@@ -63,6 +63,21 @@ body {
   border: 2px solid var(--dark-brown);
 }
 
+.graph__wrapper {
+  background-color: var(--very-pale-orange);
+  margin: 1rem auto;
+}
+
+.graph__wrapper h1 {
+  margin: 0;
+}
+
+.graph {
+  padding-top: 3rem;
+  border-bottom: 2px solid var(--cream);
+  padding-bottom: 1rem;
+}
+
 .graph__grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -85,4 +100,75 @@ body {
   height: 36px;
   background-color: var(--soft-red);
     /* background-color: var(--cyan); */
+}
+
+.graph__bar:hover {
+  opacity: .8;
+  cursor: pointer;
+}
+
+.graph__amount {
+  background-color: black;
+  color: white;
+  margin-bottom: 1rem;
+  /* width: 100%; */
+  /* padding-top: 0.5rem; */
+  /* padding-bottom: 0.5rem; */
+  border-radius: 0.25rem;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  padding: 0 0.25rem;
+  font-size: .75rem;
+}
+
+.graph__amount--active {
+  opacity: 1;
+}
+
+.amount.graph__grid {
+  grid-gap: 0;
+}
+
+
+.total {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 1.5rem;
+  align-items: end;
+}
+
+.total p {
+  margin: 0;
+}
+
+.total p {
+  margin-bottom: 8px;
+  color: var(--medium-brown);
+}
+
+.total strong {
+  color: var(--dark-brown);
+}
+
+.total__month strong {
+  font-size: 2rem;
+}
+
+.total__month--last {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.total__month--last p {
+  margin-bottom: 8px;
+}
+
+@media (min-width: 1440px) {
+  body {
+    max-width: 550px;
+  }
+  /* .graph__amount {
+    display: block;
+  } */
 }
