--- a/expenses-chart-component-main/expenses-chart-component-main/style.css
+++ b/expenses-chart-component-main/expenses-chart-component-main/style.css
@@ -169,11 +169,18 @@ body {
   margin-bottom: 8px;
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 396px) {
+  body {
+    margin: 40px auto;
+  }
+}
+
+@media (min-width: 742px) {
   body {
     max-width: 550px;
     margin: 40px auto;
   }
+
   .graph__amount {
     display: block;
   }
