--- a/employee-page-dribble/css/style.css
+++ b/employee-page-dribble/css/style.css
@@ -8,6 +8,7 @@
 @import url("components/button.css");
 @import url("components/container.css");
 @import url("components/navbar.css");
+@import url("components/header.css");
 
 /* BASIC STYLING */
 
