--- a/employee-page-dribble/css/components/button.css
+++ b/employee-page-dribble/css/components/button.css
@@ -1,5 +1,5 @@
 .btn {
-  background-color: lightgreen;
+  background-color: #05CAAF;
   padding: 12px 36px;
   border-radius: 24px;
   color: white;
